package admin;

import "google/protobuf/empty.proto";

service Admin {
  rpc Register(RegisterRequest) returns (AuthResponse);

  rpc Login(LoginRequest) returns (AuthResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (AdminResponse);

  rpc ChangePassword(ChangePasswordRequest) returns (AuthResponse);

  rpc Get(AdminRequest) returns (AdminResponse);

  rpc Edit(EditRequest) returns (AdminResponse);

  rpc Delete(AdminRequest) returns (google.protobuf.Empty);
}

message AdminResponse {
  required string id = 1;
  required string email = 2;
}

message RegisterRequest {
  required string email = 1;
  required string password = 2;
}

message AuthResponse {
  required AdminResponse admin = 1;
  required string token = 2;
}

message LoginRequest {
  required string email = 1;
  required string password = 2;
}

message ValidateTokenRequest {
  required string token = 1;
}

message ValidateTokenResponse {
  required bool decision = 1;
}

message ChangePasswordRequest {
  required string id = 1;
  required string current_password = 2;
  required string new_password = 3;
}

message AdminRequest {
  required string id = 1;
}

message EditRequest {
  required string id = 1;
  optional string email = 2;
}
